// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addon|Knobs All knobs 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-simple-knobs-component>
    <div
      ng-reflect-ng-style="[object Object]"
      style="border-radius: 8px;"
    >
      <h1>
        My name is Jane,
      </h1>
      <h3>
        today is Jan 20, 2017
      </h3>
      
      <p>
        I have a stock of 20 apples, costing $ 2.25 each.
      </p>
      
      
      <p>
        Sorry.
      </p>
      <p>
        Also, I have:
      </p>
      <ul>
        
        <li>
          Laptop
        </li>
        <li>
          Book
        </li>
        <li>
          Whiskey
        </li>
      </ul>
      
      <p>
        Nice to meet you!
      </p>
      
    </div>
  </storybook-simple-knobs-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Addon|Knobs Simple 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <h1>
       This is a template 
    </h1>
    <storybook-simple-knobs-component
      ng-reflect-name="John Doe"
      ng-reflect-phone-number="555-55-55"
    >
      <div>
        I am John Doe and I'm  years old.
      </div>
      <div>
        Phone Number: 555-55-55
      </div>
    </storybook-simple-knobs-component>
  </ng-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Addon|Knobs XSS safety 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    &lt;img src=x onerror="alert('XSS Attack')" &gt;
  </ng-component>
</storybook-dynamic-app-root>
`;
